--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "url": "https://github.com/burtonjc/obi/issues"
   },
   "homepage": "https://github.com/burtonjc/obi",
+  "engines": {
+    "node": "0.12",
+    "npm": "2.7"
+  },
   "dependencies": {
     "coffee-script": "^1.9.2",
     "q": "^1.2.0"
