--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
   },
   "dependencies": {
     "coffee-script": "^1.9.2",
-    "q": "^1.2.0"
+    "colors": "^1.0.3",
+    "koa": "^0.19.1",
+    "koa-bodyparser": "^1.5.0",
+    "koa-log4js": "0.0.1",
+    "koa-router": "^4.3.2",
+    "lodash": "^3.7.0",
+    "q": "^1.2.0",
+    "string": "^3.1.1"
   },
   "devDependencies": {
     "chai": "^2.2.0",
