--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Your intelligent assistant in the cloud.",
   "main": "index.coffee",
   "scripts": {
+    "production": "NODE_ENV=production coffee --nodejs --harmony index.coffee",
     "start": "nodemon --harmony",
     "test": "node --harmony ./node_modules/.bin/gulp test",
     "watch": "node --harmony ./node_modules/.bin/gulp watch"
