--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "private": "true",
   "version": "0.0.1",
   "description": "Your intelligent assistant in the cloud.",
-  "main": "index.coffee",
   "scripts": {
     "production": "NODE_ENV=production coffee --nodejs --harmony index.coffee",
-    "start": "nodemon --harmony",
+    "start": "node --harmony ./node_modules/.bin/gulp start",
     "test": "node --harmony ./node_modules/.bin/gulp test",
     "watch": "node --harmony ./node_modules/.bin/gulp watch"
   },
@@ -32,10 +31,12 @@
     "npm": "2.7"
   },
   "dependencies": {
+    "bunyan": "^1.3.5",
     "coffee-script": "^1.9.2",
     "colors": "^1.0.3",
     "koa": "^0.19.1",
     "koa-bodyparser": "^1.5.0",
+    "koa-bunyan-logger": "^1.2.0",
     "koa-log4js": "0.0.1",
     "koa-router": "^4.3.2",
     "lodash": "^3.7.0",
