--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bunyan": "^1.3.5",
+    "bunyan-logentries": "^1.0.0",
     "coffee-script": "^1.9.2",
     "colors": "^1.0.3",
     "koa": "^0.19.1",
