--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "koa": "^0.19.1",
     "koa-bodyparser": "^1.5.0",
     "koa-bunyan-logger": "^1.2.0",
+    "koa-cors": "0.0.14",
     "koa-log4js": "0.0.1",
     "koa-router": "^4.3.2",
     "lodash": "^3.7.0",
+    "octonode": "^0.6.17",
     "q": "^1.2.0",
     "string": "^3.1.1"
   },
